--- a/atwork-CRUD-backend/appsettings.json
+++ b/atwork-CRUD-backend/appsettings.json
@@ -24,6 +24,12 @@
     "Properties": {
       "ApplicationName": "atwork-CRUD-backend"
     }
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "Issuer": "",
+    "Audience": "",
+    "ExpirationInMinutes": 60
   }
   //"AllowedHosts": "*"
 }
