Demo initial version

--- a/atwork-CRUD-backend-Application/atwork-CRUD-backend-Application.csproj
+++ b/atwork-CRUD-backend-Application/atwork-CRUD-backend-Application.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\Employee\" />
+    <Folder Include="Commands\Employees\" />
   </ItemGroup>
 
   <ItemGroup>
