Added integration and domain tests

--- a/atwork-CRUD-backend/appsettings.Development.json
+++ b/atwork-CRUD-backend/appsettings.Development.json
@@ -1,8 +1,34 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/applog_.log",
+          "outputtemplate": "{Timestamp:o} [{Level:u3}] ({SourceContext}) {Message}{NewLine}{Exception}",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "atwork-CRUD-backend"
+    }
+  },
+  "JwtSettings": {
+    "Secret": "wJ5fU6qB7kGpIXF4UJps4Dsg1CqfH1HZ8U1gFkw4F5I=",
+    "Issuer": "Atwork",
+    "Audience": "account",
+    "ExpirationInMinutes": 60
   }
 }
